2023-XX-XX   2.7.0:
-------------------
  * add `util.any_and()`
  * add `util.intervals()`
  * add [distance metrics](../examples/distance.py) example:
    dice, hamming, jaccard, kulczynski1, rogerstanimoto, russellrao,
    sokalmichener, sokalsneath, yule
  * add example [sparse bitarray](../examples/sparse) implementations


2023-01-01   2.6.2:
-------------------
  * optimize `richcompare()` for opposite endianness
  * improve some docstrings add tests


2022-12-18   2.6.1:
-------------------
  * add documentation on shift operators, #181
  * fix typo in iterable initializer description, #179
  * optimize `richcompare()`


2022-07-19   2.6.0:
-------------------
  * add data descriptions: `.nbytes`, `.padbits`, `.readonly`
  * allow optional `endian` argument to be `None` when creating bitarrays
  * fix type annotation for `canonical_decode()`, #178
  * frozenbitarray's padbits are now guaranteed to be zero
  * add tests


2022-05-10   2.5.1:
-------------------
  * optimize `.reverse()`, see #177
  * allow negative (byte) indices in `.bytereverse()`


2022-05-04   2.5.0:
-------------------
  * add calculating of canonical Huffman codes `util.canonical_huffman()`
    and decoding thereof `util.canonical_decode()`, see #173
  * allow creating "Huffman codes" from frequency maps with a single symbol
    in `util.huffman_code()` and `util.canonical_huffman()`, see #172
  * allow bytes-like argument in `.frombytes()` and `.pack()` - previously,
    the arguments were limited to the `bytes` object, see #174
  * allow bytes-like arguments in `util.deserialize()`
  * add official [pyodide](https://pyodide.org/) support
  * add [DEFLATE decompression](../examples/puff/) example
  * optimize `.bytereverse()`
  * optimize `delslice()` for cases like `del a[1:17:2]` when `a` is large
  * fix `examples/huffman/compress.py` to handle files with 0 or 1 characters,
    see also #172
  * add `skipIF` decorator for skipping tests
  * add tests


2022-03-29   2.4.1: